--- a/pet-clinic-web/src/main/resources/templates/fragments/header.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/header.html
@@ -4,16 +4,13 @@
     <div th:fragment="header">
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a href="/">Home</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="/owners/">Owners</a>
             </li>
             <li>
-                <a href="#">News</a>
-            </li>
-            <li>
-                <a href="#">Contacts</a>
+                <a href="/vets/">Vets</a>
             </li>
         </ul>
     </div>
