show owner by id

--- a/pet-clinic-web/src/main/resources/templates/fragments/layout.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/layout.html
@@ -14,6 +14,6 @@
     <hr/>
     <div layout:fragment="content"></div>
     <hr />
-    <div layout:fragment="footer">{{ Common Footer }}</div>
+    <div layout:fragment="footer" style="border: 1px solid;">Copyright © 2018</div>
 </body>
 </html>
