--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -23,7 +23,11 @@
         <tbody>
         <tr th:each="owner : ${owners}">
             <td th:text="${owner.id}">1</td>
-            <td th:text="${owner.firstName}">Joe</td>
+            <td>
+                <a th:href="@{/owners/{id}/(id=${owner.id})}">
+                    <div th:text="${owner.firstName}">Joe</div>
+                </a>
+            </td>
             <td th:text="${owner.lastName}">Buck</td>
         </tr>
         </tbody>
