owner "new" controller

--- a/pet-clinic-web/src/main/resources/templates/fragments/header.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/header.html
@@ -2,17 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
     <div th:fragment="header">
-        <ul>
-            <li>
-                <a href="/">Home</a>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
             </li>
-            <li>
-                <a href="/owners/">Owners</a>
+            <li class="nav-item">
+                <a class="nav-link" href="/owners/">Owners</a>
             </li>
-            <li>
-                <a href="/vets/">Vets</a>
+            <li class="nav-item">
+                <a class="nav-link" href="/vets/">Vets</a>
             </li>
         </ul>
     </div>
+    <hr />
 </body>
 </html>
