--- a/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
@@ -12,19 +12,21 @@
 <div layout:fragment="content">
     <h2 th:text="'Owner Information'">Owner Information</h2>
     <dl>
+        <dt>#:</dt>
+        <dd th:text="${owner.id}">#></dd>
         <dt>First Name:</dt>
-            <dd th:text="${owner.firstName}">firstName></dd>
+        <dd th:text="${owner.firstName}">firstName></dd>
         <dt>Last Name:</dt>
-            <dd th:text="${owner.lastName}">lastName></dd>
+        <dd th:text="${owner.lastName}">lastName></dd>
         <dt>Address:</dt>
-            <dd th:text="${owner.address}">address></dd>
+        <dd th:text="${owner.address}">address></dd>
         <dt>City:</dt>
-            <dd th:text="${owner.city}">city></dd>
+        <dd th:text="${owner.city}">city></dd>
         <dt>Phone:</dt>
-            <dd th:text="${owner.phone}">phone></dd>
+        <dd th:text="${owner.phone}">phone></dd>
     </dl>
 
-    <hr />
+    <hr/>
 
     <h2 th:text="'Pets and Visits'">Pets and Visits</h2>
     <table class="table">
@@ -45,6 +47,17 @@
         </tr>
         </tbody>
     </table>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <a th:href="@{/owners/{id}/edit(id=${owner.id})}">
+                <button type="submit" class="btn btn-primary">Edit Owner</button>
+            </a>
+            <a th:href="@{/owners/pet/{id}/edit(id=${owner.id})}">
+                <button type="submit" class="btn btn-primary">Add New Pet</button>
+            </a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
