--- a/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
@@ -12,11 +12,14 @@
 <div layout:fragment="content">
     <form
             th:object="${owner}"
-            th:action="@{/owners/new}"
             method="post"
             class="form-horizontal"
             id="create-owner-form"
     >
+        <div th:if="${#fields.hasErrors('*')}">
+            <p>Please Correct Errors Below!</p>
+        </div>
+
         <div class="form-group">
             <div class="control-group" id="lastNameGroup">
                 <div class="col-sm-10">
@@ -28,6 +31,7 @@
                                 size="30"
                                 maxlength="80"
                         />
+                        <span th:each="err : ${#fields.errors('firstName')}" th:text="${err}" />
                     </div>
                     <div class="form-field">
                         <label class="control-label">Last Name:</label>
@@ -37,6 +41,7 @@
                                 size="30"
                                 maxlength="80"
                         />
+                        <span th:each="err : ${#fields.errors('lastName')}" th:text="${err}" />
                     </div>
                     <div class="form-field">
                         <label class="control-label">Address:</label>
@@ -46,6 +51,7 @@
                                 size="30"
                                 maxlength="80"
                         />
+                        <span th:each="err : ${#fields.errors('address')}" th:text="${err}" />
                     </div>
                     <div class="form-field">
                         <label class="control-label">City:</label>
@@ -55,6 +61,7 @@
                                 size="30"
                                 maxlength="80"
                         />
+                        <span th:each="err : ${#fields.errors('city')}" th:text="${err}" />
                     </div>
                     <div class="form-field">
                         <label class="control-label">Phone:</label>
@@ -64,6 +71,7 @@
                                 size="30"
                                 maxlength="80"
                         />
+                        <span th:each="err : ${#fields.errors('phone')}" th:text="${err}" />
                     </div>
                     <span class="help-inline">
                         <div th:if="${#fields.hasAnyErrors()}">
