--- a/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
@@ -20,11 +20,12 @@
             <p>Please Correct Errors Below!</p>
         </div>
 
+        <input type="hidden" name="id" th:value="*{id}"/>
         <div class="form-group">
             <div class="control-group" id="lastNameGroup">
                 <div class="col-sm-10">
                     <div class="form-field">
-                        <label class="control-label">First Name:</label>
+                        <label class="control-label" th:text="#{owner.firstName}">First Name:</label>
                         <input
                                 class="form-control"
                                 th:field="*{firstName}"
